submit java-collections-ru/lists